_legacy_apps/base/wireguard-site-to-site/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: web
          protocol: TCP
        - port: web
          protocol: UDP
        - port: websecure
          protocol: TCP
        - port: websecure
          protocol: UDP

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: iperf
          podSelector:
            matchLabels:
              app.kubernetes.io/name: iperf
      ports:
        - port: http
          protocol: TCP
